# subdriver-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  requirements.txt
app/api/: dependencies.py
app/api/routes/: extraction.py  interaction.py  navigation.py  substack.py  workflows.py
app/core/: browser.py  config.py  database.py  exceptions.py
app/models/: requests.py  responses.py
app/services/: element.py  element_service.py  substack.py  substack_service.py  workflows.py
app/utils/: cache.py  logger.py  metrics.py  rate_limiter.py
