[project]
name = "zendriver-docker-example"
version = "0.1.0"
description = "Example project for using Zendriver with Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "zendriver>=0.6.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "httpx>=0.25.1",
    "redis>=5.0.1",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
